--- a/QuanLyGiaiCauLong/Views/Shared/_Layout.cshtml
+++ b/QuanLyGiaiCauLong/Views/Shared/_Layout.cshtml
@@ -23,7 +23,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DanhSachGiaiDau">Danh sách giải đấu</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DanhSachDoiTuyen">Danh sách dội tuyển</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DanhSachTrongTai">Danh sách trọng tài</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DanhSachVDV">Danh sách vận động viên</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DanhSachTranDau">Danh sách trận đấu</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TimKiemVdv">Tìm kiếm VDV</a>
                         </li>
                     </ul>
                 </div>
